--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Workout-tracker",
+  "name": "Fitness-Tracker",
   "version": "1.0.0",
   "description": "For this assignment, you'll create a workout tracker. You have already been provided with the front end code in the `Develop` folder. This assignment will require you to create Mongo database with a Mongoose schema and handle routes with Express.",
   "main": "index.js",
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sukediz/Workout-tracker.git"
+    "url": "git+https://github.com/sukediz/Fitness-Tracker.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/sukediz/Workout-tracker/issues"
+    "url": "https://github.com/sukediz/Fitness-Tracker/issues"
   },
-  "homepage": "https://github.com/sukediz/Workout-tracker#readme",
+  "homepage": "https://github.com/sukediz/Fitness-Tracker#readme",
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.10.3",
